# tkvideo

./: CMakeLists.txt  ChangeLog  README  RELEASE.NOTES  license.terms  pkgIndex.tcl.in
demos/: demo.tcl
doc/: manpage.css  tkvideo.man
generic/: tkvideo.c  tkvideo.h
win/: .gitignore  dshow_utils.cpp  dshow_utils.h  graph.cpp  graph.h  makefile.vc  nmakehlp.c  rules.vc  tkvideo.dsp  tkvideo.rc  winvideo.cpp
win/dx/: qedit.h
